# tidefs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  COPYING  Cargo.toml  README.md  deny.toml  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml
apps/tidefs-block-volume-adapter-daemon/: Cargo.toml  README.md
apps/tidefs-block-volume-adapter-daemon/src/: block_device_validation.rs  decode_dispatch_tests.rs  kernel_check.rs  lib.rs  main.rs  shutdown.rs  signal_shutdown.rs  storage_backend.rs  ublk_completion.rs  ublk_io.rs  ublk_io_handler.rs  ublk_io_uring.rs
apps/tidefs-block-volume-adapter-daemon/tests/: backing_file_tests.rs  device_lifecycle.rs  io_uring_dispatch_integration.rs  object_store_dispatch.rs  resize_smoke_tests.rs
apps/tidefs-filesystem-demo/: Cargo.toml
apps/tidefs-filesystem-demo/src/: main.rs  mount.rs
apps/tidefs-posix-filesystem-adapter-daemon/: Cargo.toml  README.md
apps/tidefs-posix-filesystem-adapter-daemon/doc/: ERROR_TAXONOMY.md
apps/tidefs-posix-filesystem-adapter-daemon/src/: clustered_lock_forwarder.rs  clustered_mount.rs  coherency_profile.rs  dispatch_helpers.rs  fsync_handler.rs  fuse_create_unlink_dispatch.rs  fuse_flush_fsync.rs  fuse_lookup_forget.rs  fuse_posix_lock.rs  fuse_read.rs  fuse_rename.rs  fuse_vfs_adapter.rs  fuse_write.rs  handler_prelude.rs  lib.rs  live_owner.rs  lock_dispatch.rs  main.rs  materialized_cache.rs  mmap_coherency.rs  mount_options.rs  observability.rs  placement_recorder.rs  read_cache.rs  readdir_dispatch.rs  trace.rs  txg_cycle.rs  workload_observer.rs  write_dispatch.rs  writeback_cache_projection.rs  writeback_reclaim.rs  xattr_integrity.rs  xfstests_harness.rs
apps/tidefs-posix-filesystem-adapter-daemon/tests/: access_mount_smoke.rs  ack_receipt_runtime_evidence.rs  concurrent_ops.rs  copy_file_range_smoke.rs  crash_recovery_ops.rs  daemon_config_smoke.rs  data_integrity_lifecycle_smoke.rs  defrag_read_integration.rs  directory_ops.rs  e2e_mount_validation.rs  fallocate_punch_hole_integration.rs  file_locking_smoke.rs  flush_release_mount_smoke.rs  fsync_durability.rs  fuse_crash_recovery.rs  fuse_e2e_smoke.rs  fuse_large_file_read_write.rs  fuse_link_unlink.rs  fuse_lock_recovery.rs  fuse_mkdir_create_integration.rs  fuse_mount_integration_suite.rs  fuse_rename_link_symlink.rs  fuse_sync_smoke.rs  fuse_vfs_link_smoke.rs  fuse_vfs_read_write_smoke.rs  fuse_vfs_statfs_smoke.rs  fuse_xattr.rs  fuse_xattr_smoke.rs  getattr_stat_smoke.rs  intent_log_write_mount_smoke.rs  lseek_smoke.rs  mknod_fifo_smoke.rs  mknod_smoke.rs  open_release_smoke.rs  orphan_tmpfile_rename_crash_recovery.rs  poll_mount_smoke.rs  posix_error_regression.rs  readdir_smoke.rs  readdir_vfs_smoke.rs  receipt_authority_mount.rs  (+11 more)
apps/tidefs-scrub/: Cargo.toml
apps/tidefs-scrub/src/: main.rs  scrub.rs
apps/tidefs-storage-node/: Cargo.toml  README.md
apps/tidefs-storage-node/src/: authority_spine.rs  client.rs  config.rs  lib.rs  main.rs  protocol.rs  server.rs  session_pool_transport.rs  snapshot_barrier.rs
apps/tidefs-storage-node/tests/: cluster_full_flow_e2e.rs  cluster_pool_create_e2e.rs  integration_test.rs
apps/tidefs-store-demo/: Cargo.toml
apps/tidefs-store-demo/src/: main.rs
apps/tidefsctl/: Cargo.toml
apps/tidefsctl/src/: main.rs  parser.rs
apps/tidefsctl/tests/: pool_scan_cli.rs  status_command_boundary.rs
crates/tidefs-anti-entropy-auditor/: Cargo.toml
crates/tidefs-anti-entropy-auditor/src/: ae_state.rs  comparator.rs  lib.rs  merkle_exchange.rs  scan_scheduler.rs
crates/tidefs-anti-entropy-auditor/tests/: anti_entropy_auditor_tests.rs  authority_claim_tests.rs  divergence_classification_tests.rs  edge_case_tests.rs  reconciliation_ordering_tests.rs  repair_trigger_receipt_tests.rs  repair_trigger_tests.rs
crates/tidefs-auth/: Cargo.toml
crates/tidefs-auth/src/: attestation.rs  audit.rs  authorization.rs  capability.rs  envelope.rs  error.rs  handshake.rs  identity.rs  lib.rs  local_only.rs  override_mechanism.rs  persistence.rs  principal.rs  records.rs  security.rs  session_security.rs
crates/tidefs-auth/tests/: auth_state_machine.rs  credential_validation.rs  integration_test.rs  permission_dac.rs  remote_privileged_action.rs  token_lifecycle.rs  uid_gid_mapping.rs
crates/tidefs-background-scheduler/: Cargo.toml
crates/tidefs-background-scheduler/src/: lib.rs  multi_threaded.rs  scheduler.rs  scheduling.rs  snapshot_pruner.rs
crates/tidefs-background-scheduler/tests/: cleanup_job_scheduling.rs  concurrency.rs  priority_ordering.rs  scheduler_tests.rs  shutdown_lifecycle.rs  (+2 more)
crates/tidefs-binary_schema-checksum/: Cargo.toml
crates/tidefs-binary_schema-core/: Cargo.toml
crates/tidefs-binary_schema-framing/: Cargo.toml
crates/tidefs-block-allocator/: Cargo.toml  README.md
crates/tidefs-block-kmod/: .gitignore  Cargo.toml  Kbuild  Makefile  README.md  tidefs_block_kmod.rs
crates/tidefs-block-volume-adapter-core/: Cargo.toml
crates/tidefs-block-volume-adapter-ublk-control-runtime/: Cargo.toml  README.md
crates/tidefs-btree/: Cargo.toml
crates/tidefs-bulk-service/: Cargo.toml
crates/tidefs-cache-coherency/: Cargo.toml
crates/tidefs-cache-core/: Cargo.toml
crates/tidefs-checksum-tree/: Cargo.toml
crates/tidefs-chunk-shipper/: Cargo.toml
crates/tidefs-claim-ledger/: Cargo.toml  README.md
crates/tidefs-cleanup-engine/: Cargo.toml  README.md
crates/tidefs-cleanup-job-core/: Cargo.toml
crates/tidefs-cleanup-queue-core/: Cargo.toml  README.md
fuzz/: Cargo.toml  fake_lib.rs
fuzz/fuzz_targets/: compression_roundtrip.rs  encryption_roundtrip.rs  encryption_tamper.rs  lease_lifecycle.rs  object_store_record_decode.rs  quorum_write.rs  send_stream_segment_frame_decode.rs  transport_chunk_shipper.rs  transport_frame_decode.rs  transport_handshake_decode.rs  transport_lane_demux.rs  transport_session_state_machine.rs  ublk_command_parse.rs  witness_quorum.rs
kmod/: Cargo.toml  README.md
kmod/smoke_module/: Kbuild  Makefile  rust_tidefs_smoke.rs
kmod/src/: error.rs  kernel_types.rs  lib.rs  traits.rs  types.rs
kmod/tests/: kbuild_xattr_store.rs
(+2462 files in other folders)
