[workspace]
resolver = "2"
members = [
  "crates/tidefs-transport",
  "crates/tidefs-kmod-posix-vfs",
  "crates/tidefs-types-vfs-core",
  "crates/tidefs-types-vfs-owned",
  "crates/tidefs-types-package-profile-catalog",
  "crates/tidefs-kernel-cutover-runtime",
  "crates/tidefs-kernel-storage-io",
  "crates/tidefs-types-posix-filesystem-adapter-core",
  "crates/tidefs-types-reclaim-queue-core",
  "crates/tidefs-types-cache-lattice-core",
  "crates/tidefs-cache-coherency",
  "crates/tidefs-cache-core",
  "crates/tidefs-invalidation-feed",
  "crates/tidefs-reclaim-queue-core",
  "crates/tidefs-background-scheduler",
  "crates/tidefs-data-cleaner",
  "crates/tidefs-derived-catalog",
  "crates/tidefs-dataset-catalog",
  "crates/tidefs-dataset-properties",
  "crates/tidefs-types-orphan-index-core",
  "crates/tidefs-schema-codec-vfs",
  "crates/tidefs-schema-codec-posix-filesystem-adapter",
  "crates/tidefs-scrub-core",
  "crates/tidefs-shard-group",
  "crates/tidefs-binary_schema-core",
  "crates/tidefs-binary_schema-checksum",
  "crates/tidefs-binary_schema-framing",
  "crates/tidefs-posix-filesystem-adapter-reply",
  "crates/tidefs-posix-filesystem-adapter-workers-io",
  "crates/tidefs-posix-filesystem-adapter-workers-locks",
  "crates/tidefs-posix-acl",
  "crates/tidefs-permission",
  "crates/tidefs-posix-semantics",
  "crates/tidefs-membership-epoch",
  "crates/tidefs-membership-live",
  "crates/tidefs-partition-runtime",
  "crates/tidefs-performance-contract",
  "crates/tidefs-membership-types",
  "crates/tidefs-two-node-harness",
  "crates/tidefs-node-join",
  "crates/tidefs-node-drain",
  "crates/tidefs-claim-ledger",
  "crates/tidefs-witness-set",
  "crates/tidefs-lease",
  "crates/tidefs-lease-manager",
  "crates/tidefs-cluster",
  "crates/tidefs-lock-service",
  "crates/tidefs-coordination-strategy",
  "crates/tidefs-replication-model",
  "crates/tidefs-replication",
  "crates/tidefs-replica-health",
  "crates/tidefs-rebuild-planner",
  "crates/tidefs-rebalance-planner",
  "crates/tidefs-rebuild-runtime",
  "crates/tidefs-recovery-loop",
  "crates/tidefs-reserve-ledger",
  "crates/tidefs-anti-entropy-auditor",
  "crates/tidefs-relocation-planner",
  "crates/tidefs-relocation-governor",
  "crates/tidefs-placement-planner",
  "crates/tidefs-placement-runtime",
  "crates/tidefs-verification-engine",
  "crates/tidefs-flow-commit-coordinator",
  "crates/tidefs-offload-core",
  "crates/tidefs-extent-map",
  "crates/tidefs-locator-table",
  "crates/tidefs-space-accounting",
  "crates/tidefs-send-stream",
  "crates/tidefs-receive-stream",
  "crates/tidefs-snapshot-pruner",
  "crates/tidefs-vfs-engine",
  "crates/tidefs-vfs-rpc",
  "crates/tidefs-spacemap-allocator",
  "crates/tidefs-pool-allocator",
  "crates/tidefs-pool-scan",
  "crates/tidefs-pool-import",
  "crates/tidefs-reclaim",
  "crates/tidefs-segment-cleaner",
  "crates/tidefs-trace-oracle",
  "crates/tidefs-crash-oracle",
  "crates/tidefs-model-core",
  "crates/tidefs-env-fuse-model",
  "crates/tidefs-clock-timing",
  "crates/tidefs-chunk-shipper",
  "crates/tidefs-checksum-tree",
  "crates/tidefs-erasure-coding",
  "crates/tidefs-erasure-coded-store",
  "crates/tidefs-geometry-convert",
  "crates/tidefs-btree",
  "crates/tidefs-cleanup-queue-core",
  "crates/tidefs-block-allocator",
  "crates/tidefs-block-volume-adapter-core",
  "crates/tidefs-env-ublk-model",
  "crates/tidefs-block-volume-adapter-ublk-control-runtime",
  "crates/tidefs-ublk-abi",
  "crates/tidefs-local-object-store",
  "crates/tidefs-local-filesystem",
  "crates/tidefs-commit_group",
  "crates/tidefs-types-transport-session",
  "crates/tidefs-validation",
  "crates/tidefs-workload",
  "crates/tidefs-types-claim-ledger-core",
  "crates/tidefs-types-dataset-feature-flags-core",
  "crates/tidefs-dataset-feature-flags",
  "crates/tidefs-types-polymorphic-directory-index-core",
  "crates/tidefs-dir-index",
  "crates/tidefs-durability-layout",
  "crates/tidefs-intent-log",
  "crates/tidefs-storage-intent-core",
  "crates/tidefs-storage-intent-workload-signals",
  "crates/tidefs-storage-intent-policy",
  "crates/tidefs-storage-intent-read-serving",
  "crates/tidefs-storage-intent-local-media-capability",
  "crates/tidefs-storage-intent-remote-media-capability",
  "crates/tidefs-storage-intent-media-capability-refresh",
  "crates/tidefs-storage-intent-cost",
  "crates/tidefs-storage-intent-satisfaction",
  "crates/tidefs-storage-intent-scheduler",
  "crates/tidefs-namespace",
  "crates/tidefs-inode-table",
  "crates/tidefs-xattr-storage",
  "crates/tidefs-types-polymorphic-xattr-core",
  "crates/tidefs-types-extent-map-core",
  "crates/tidefs-types-secret-key-policy-core",
  "crates/tidefs-types-space-accounting-core",
  "crates/tidefs-types-dataset-lifecycle-core",
  "crates/tidefs-types-pool-label-core",
  "crates/tidefs-dataset-lifecycle",
  "crates/tidefs-gc-pin-set",
  "crates/tidefs-cleanup-job-core",
  "crates/tidefs-cleanup-engine",
  "crates/tidefs-types-deferred-cleanup-core",
  "crates/tidefs-types-incremental-job-core",
  "crates/tidefs-secret-key-policy-runtime",
  "crates/tidefs-quorum-write",
  "crates/tidefs-quorum-write-runtime",
  "apps/tidefs-posix-filesystem-adapter-daemon",
  "crates/tidefs-distributed-model-check",
  "apps/tidefs-block-volume-adapter-daemon",
  "apps/tidefsctl",
  "apps/tidefs-storage-node",
  "apps/tidefs-store-demo",
  "apps/tidefs-filesystem-demo",
  "apps/tidefs-scrub",
  "xtask/tidefs-xtask",
  "crates/tidefs-encryption",
  "crates/tidefs-compaction",
  "crates/tidefs-compression",
  "crates/tidefs-frame",
  "crates/tidefs-incremental-job-core",
  "crates/tidefs-replicated-object-store",
  "crates/tidefs-orphan-index",
  "crates/tidefs-auth",
  "crates/tidefs-device-removal",
  "crates/tidefs-inode-attributes",
  "crates/tidefs-object-io",
  "crates/tidefs-online-defrag",
  "crates/tidefs-dedup",
  "crates/tidefs-tdma-scheduler",
  "crates/tidefs-posix-guarantee-verifier",
  "crates/tidefs-fuser",
  "kmod",
  "crates/tidefs-block-kmod",
]
# Review debt TFR-002: these manifests are present on disk but are not current
# workspace members. Keep the quarantine explicit until each is restored,
# fixed as a standalone tool/fuzzer, archived, or deleted.
exclude = [
  "crates/tidefs-binary_schema-core/fuzz",
  "crates/tidefs-local-filesystem/fuzz",
  "crates/tidefs-local-object-store/fuzz",
  "crates/tidefs-validation/fuzz",
  "fuzz",
]

[workspace.package]
version = "0.421.0"
edition = "2021"
rust-version = "1.88.0"
publish = false
repository = "https://github.com/tidefs/tidefs"
homepage = "https://tidefs.org"
documentation = "https://github.com/tidefs/tidefs"
license = "GPL-2.0-only WITH Linux-syscall-note"
authors = ["TideFS Contributors"]


[workspace.dependencies]
bincode = "1"
chacha20poly1305 = "0.10"
criterion = "0.4"
ed25519-dalek = "1"
hex = "0.4"
hmac = "0.12"
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = "1"
tracing = "0.1"
zeroize = "1"

tidefs-auth = { path = "crates/tidefs-auth" }
tidefs-background-scheduler = { path = "crates/tidefs-background-scheduler" }
tidefs-binary_schema-checksum = { path = "crates/tidefs-binary_schema-checksum" }
tidefs-binary_schema-core = { path = "crates/tidefs-binary_schema-core" }
tidefs-binary_schema-framing = { path = "crates/tidefs-binary_schema-framing" }
tidefs-block-allocator = { path = "crates/tidefs-block-allocator" }
tidefs-block-volume-adapter-core = { path = "crates/tidefs-block-volume-adapter-core" }
tidefs-block-volume-adapter-daemon = { path = "apps/tidefs-block-volume-adapter-daemon" }
tidefs-block-volume-adapter-ublk-control-runtime = { path = "crates/tidefs-block-volume-adapter-ublk-control-runtime" }
tidefs-btree = { path = "crates/tidefs-btree" }
tidefs-cache-coherency = { path = "crates/tidefs-cache-coherency" }
tidefs-cache-core = { path = "crates/tidefs-cache-core" }
tidefs-checksum-tree = { path = "crates/tidefs-checksum-tree" }
tidefs-chunk-shipper = { path = "crates/tidefs-chunk-shipper" }
tidefs-claim-ledger = { path = "crates/tidefs-claim-ledger" }
tidefs-cleanup-engine = { path = "crates/tidefs-cleanup-engine" }
tidefs-cleanup-job-core = { path = "crates/tidefs-cleanup-job-core" }
tidefs-cleanup-queue-core = { path = "crates/tidefs-cleanup-queue-core" }
tidefs-clock-timing = { path = "crates/tidefs-clock-timing" }
tidefs-cluster = { path = "crates/tidefs-cluster" }
tidefs-commit_group = { path = "crates/tidefs-commit_group" }
tidefs-compaction = { path = "crates/tidefs-compaction" }
tidefs-compression = { path = "crates/tidefs-compression" }
tidefs-coordination-strategy = { path = "crates/tidefs-coordination-strategy" }
tidefs-crash-oracle = { path = "crates/tidefs-crash-oracle" }
tidefs-dataset-catalog = { path = "crates/tidefs-dataset-catalog" }
tidefs-dataset-feature-flags = { path = "crates/tidefs-dataset-feature-flags" }
tidefs-dataset-lifecycle = { path = "crates/tidefs-dataset-lifecycle" }
tidefs-dataset-properties = { path = "crates/tidefs-dataset-properties" }
tidefs-dedup = { path = "crates/tidefs-dedup" }
tidefs-derived-catalog = { path = "crates/tidefs-derived-catalog" }
tidefs-device-removal = { path = "crates/tidefs-device-removal" }
tidefs-dir-index = { path = "crates/tidefs-dir-index" }
tidefs-durability-layout = { path = "crates/tidefs-durability-layout" }
tidefs-encryption = { path = "crates/tidefs-encryption" }
tidefs-erasure-coding = { path = "crates/tidefs-erasure-coding" }
tidefs-extent-map = { path = "crates/tidefs-extent-map" }
tidefs-flow-commit-coordinator = { path = "crates/tidefs-flow-commit-coordinator" }
tidefs-frame = { path = "crates/tidefs-frame" }
tidefs-gc-pin-set = { path = "crates/tidefs-gc-pin-set" }
tidefs-incremental-job-core = { path = "crates/tidefs-incremental-job-core" }
tidefs-inode-attributes = { path = "crates/tidefs-inode-attributes" }
tidefs-inode-table = { path = "crates/tidefs-inode-table" }
tidefs-intent-log = { path = "crates/tidefs-intent-log" }
tidefs-invalidation-feed = { path = "crates/tidefs-invalidation-feed" }
tidefs-kernel-storage-io = { path = "crates/tidefs-kernel-storage-io" }
tidefs-kmod-bridge = { path = "kmod" }
tidefs-lease = { path = "crates/tidefs-lease" }
tidefs-lease-manager = { path = "crates/tidefs-lease-manager" }
tidefs-local-filesystem = { path = "crates/tidefs-local-filesystem" }
tidefs-local-object-store = { path = "crates/tidefs-local-object-store" }
tidefs-locator-table = { path = "crates/tidefs-locator-table" }
tidefs-lock-service = { path = "crates/tidefs-lock-service" }
tidefs-membership-epoch = { path = "crates/tidefs-membership-epoch" }
tidefs-membership-live = { path = "crates/tidefs-membership-live" }
tidefs-membership-types = { path = "crates/tidefs-membership-types" }
tidefs-model-core = { path = "crates/tidefs-model-core" }
tidefs-namespace = { path = "crates/tidefs-namespace" }
tidefs-node-drain = { path = "crates/tidefs-node-drain" }
tidefs-node-join = { path = "crates/tidefs-node-join" }
tidefs-object-io = { path = "crates/tidefs-object-io" }
tidefs-online-defrag = { path = "crates/tidefs-online-defrag" }
tidefs-orphan-index = { path = "crates/tidefs-orphan-index" }
tidefs-partition-runtime = { path = "crates/tidefs-partition-runtime" }
tidefs-performance-contract = { path = "crates/tidefs-performance-contract" }
tidefs-permission = { path = "crates/tidefs-permission" }
tidefs-placement-planner = { path = "crates/tidefs-placement-planner" }
tidefs-placement-runtime = { path = "crates/tidefs-placement-runtime" }
tidefs-pool-allocator = { path = "crates/tidefs-pool-allocator" }
tidefs-pool-import = { path = "crates/tidefs-pool-import" }
tidefs-pool-scan = { path = "crates/tidefs-pool-scan" }
tidefs-posix-acl = { path = "crates/tidefs-posix-acl" }
tidefs-posix-filesystem-adapter-daemon = { path = "apps/tidefs-posix-filesystem-adapter-daemon" }
tidefs-posix-filesystem-adapter-reply = { path = "crates/tidefs-posix-filesystem-adapter-reply" }
tidefs-posix-filesystem-adapter-workers-io = { path = "crates/tidefs-posix-filesystem-adapter-workers-io" }
tidefs-posix-filesystem-adapter-workers-locks = { path = "crates/tidefs-posix-filesystem-adapter-workers-locks" }
tidefs-posix-semantics = { path = "crates/tidefs-posix-semantics" }
tidefs-quorum-write = { path = "crates/tidefs-quorum-write" }
tidefs-quorum-write-runtime = { path = "crates/tidefs-quorum-write-runtime" }
tidefs-rebalance-planner = { path = "crates/tidefs-rebalance-planner" }
tidefs-rebuild-planner = { path = "crates/tidefs-rebuild-planner" }
tidefs-rebuild-runtime = { path = "crates/tidefs-rebuild-runtime" }
tidefs-receive-stream = { path = "crates/tidefs-receive-stream" }
tidefs-reclaim = { path = "crates/tidefs-reclaim" }
tidefs-reclaim-queue-core = { path = "crates/tidefs-reclaim-queue-core" }
tidefs-recovery-loop = { path = "crates/tidefs-recovery-loop" }
tidefs-relocation-planner = { path = "crates/tidefs-relocation-planner" }
tidefs-relocation-governor = { path = "crates/tidefs-relocation-governor" }
tidefs-replica-health = { path = "crates/tidefs-replica-health" }
tidefs-replicated-object-store = { path = "crates/tidefs-replicated-object-store" }
tidefs-replication = { path = "crates/tidefs-replication" }
tidefs-replication-model = { path = "crates/tidefs-replication-model" }
tidefs-reserve-ledger = { path = "crates/tidefs-reserve-ledger" }
tidefs-schema-codec-posix-filesystem-adapter = { path = "crates/tidefs-schema-codec-posix-filesystem-adapter" }
tidefs-schema-codec-vfs = { path = "crates/tidefs-schema-codec-vfs" }
tidefs-scrub-core = { path = "crates/tidefs-scrub-core" }
tidefs-segment-cleaner = { path = "crates/tidefs-segment-cleaner" }
tidefs-send-stream = { path = "crates/tidefs-send-stream" }
tidefs-shard-group = { path = "crates/tidefs-shard-group" }
tidefs-space-accounting = { path = "crates/tidefs-space-accounting" }
tidefs-spacemap-allocator = { path = "crates/tidefs-spacemap-allocator" }
tidefs-storage-intent-core = { path = "crates/tidefs-storage-intent-core" }
tidefs-storage-intent-remote-media-capability = { path = "crates/tidefs-storage-intent-remote-media-capability" }
tidefs-storage-intent-workload-signals = { path = "crates/tidefs-storage-intent-workload-signals" }
tidefs-storage-intent-cost = { path = "crates/tidefs-storage-intent-cost" }
tidefs-storage-intent-satisfaction = { path = "crates/tidefs-storage-intent-satisfaction" }
tidefs-storage-intent-scheduler = { path = "crates/tidefs-storage-intent-scheduler" }
tidefs-tdma-scheduler = { path = "crates/tidefs-tdma-scheduler" }
tidefs-trace-oracle = { path = "crates/tidefs-trace-oracle" }
tidefs-transport = { path = "crates/tidefs-transport" }
tidefs-two-node-harness = { path = "crates/tidefs-two-node-harness" }
tidefs-types-cache-lattice-core = { path = "crates/tidefs-types-cache-lattice-core" }
tidefs-types-claim-ledger-core = { path = "crates/tidefs-types-claim-ledger-core" }
tidefs-types-dataset-feature-flags-core = { path = "crates/tidefs-types-dataset-feature-flags-core" }
tidefs-types-dataset-lifecycle-core = { path = "crates/tidefs-types-dataset-lifecycle-core" }
tidefs-types-deferred-cleanup-core = { path = "crates/tidefs-types-deferred-cleanup-core" }
tidefs-types-extent-map-core = { path = "crates/tidefs-types-extent-map-core" }
tidefs-types-incremental-job-core = { path = "crates/tidefs-types-incremental-job-core" }
tidefs-types-orphan-index-core = { path = "crates/tidefs-types-orphan-index-core" }
tidefs-types-package-profile-catalog = { path = "crates/tidefs-types-package-profile-catalog" }
tidefs-types-polymorphic-directory-index-core = { path = "crates/tidefs-types-polymorphic-directory-index-core" }
tidefs-types-polymorphic-xattr-core = { path = "crates/tidefs-types-polymorphic-xattr-core" }
tidefs-types-pool-label-core = { path = "crates/tidefs-types-pool-label-core" }
tidefs-types-posix-filesystem-adapter-core = { path = "crates/tidefs-types-posix-filesystem-adapter-core" }
tidefs-types-reclaim-queue-core = { path = "crates/tidefs-types-reclaim-queue-core" }
tidefs-types-secret-key-policy-core = { path = "crates/tidefs-types-secret-key-policy-core" }
tidefs-types-space-accounting-core = { path = "crates/tidefs-types-space-accounting-core" }
tidefs-types-transport-session = { path = "crates/tidefs-types-transport-session" }
tidefs-types-vfs-core = { path = "crates/tidefs-types-vfs-core" }
tidefs-types-vfs-owned = { path = "crates/tidefs-types-vfs-owned" }
tidefs-ublk-abi = { path = "crates/tidefs-ublk-abi" }
tidefs-validation = { path = "crates/tidefs-validation" }
tidefs-verification-engine = { path = "crates/tidefs-verification-engine" }
tidefs-vfs-engine = { path = "crates/tidefs-vfs-engine" }
tidefs-witness-set = { path = "crates/tidefs-witness-set" }
tidefs-workload = { path = "crates/tidefs-workload" }
tidefs-xattr-storage = { path = "crates/tidefs-xattr-storage" }

[workspace.lints.rust]
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
unsafe_code = "deny"
cast_lossless = "warn"
dbg_macro = "warn"
missing_safety_doc = "deny"
todo = "warn"
unwrap_used = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"
invalid_codeblock_attributes = "warn"
[workspace.metadata.tidefs]
mode = "implementation-active"
authorized_by = "user"
authorized_on = "2026-06-01"
notes = [
  "fresh TideFS repository created on master from audited source import",
  "validation output artifacts are not a repo policy; runtime output is ephemeral unless an operator explicitly saves it outside the repository",
  "known architectural debt is tracked in docs/REVIEW_TODO_REGISTER.md before deeper implementation work",
]

[patch.crates-io]
fuser = { path = "crates/tidefs-fuser" }
