[package]
name = "tidefs-kmod-bridge"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

description = "TideFS Rust-for-Linux common bridge substrate (stratum s2 / c6) — shared kernel-boundary trait contracts, opaque Linux object facades, lock/pin/workqueue glue, and kernel-compatible VFS type definitions for downstream kernel leaf modules"

[lib]
name = "tidefs_kmod_bridge"
path = "src/lib.rs"

[dependencies]
# s0 core crates — used by kernel_types re-export under cargo (non-Kbuild).
# Under Kbuild, the kernel_types module provides self-contained equivalents.
tidefs-types-vfs-core = { path = "../crates/tidefs-types-vfs-core" }
tidefs-vfs-engine = { path = "../crates/tidefs-vfs-engine" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(CONFIG_RUST)"] }
