[package]
name = "tidefs-block-volume-adapter-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "TideFS block-volume adapter daemon for live ublk serving and host/device boundary checks"

[dependencies]
libc = "0.2"
tempfile = { workspace = true }
io-uring = "0.7.12"
tidefs-block-volume-adapter-core = { workspace = true }
tidefs-block-volume-adapter-ublk-control-runtime = { workspace = true }
tidefs-ublk-abi = { workspace = true }
tidefs-local-object-store = { workspace = true }
tidefs-recovery-loop = { workspace = true }
tidefs-commit_group = { workspace = true }
tidefs-types-package-profile-catalog = { workspace = true }

[features]
ublk-host = []

[[bin]]
name = "tidefs-block-volume-adapter-daemon"
path = "src/main.rs"

[dev-dependencies]
blake3 = { version = "1", default-features = false }
tidefs-block-volume-adapter-core = { workspace = true }
