[package]
name = "tidefs-block-volume-adapter-daemon"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "TideFS block-volume adapter daemon for live ublk serving and host/device boundary checks"

[dependencies]
libc = "0.2"
tempfile = "3"
io-uring = "0.7.12"
tidefs-block-volume-adapter-core = { path = "../../crates/tidefs-block-volume-adapter-core" }
tidefs-block-volume-adapter-ublk-control-runtime = { path = "../../crates/tidefs-block-volume-adapter-ublk-control-runtime" }
tidefs-ublk-abi = { path = "../../crates/tidefs-ublk-abi" }
tidefs-local-object-store = { path = "../../crates/tidefs-local-object-store" }
tidefs-recovery-loop = { path = "../../crates/tidefs-recovery-loop" }
tidefs-commit_group = { path = "../../crates/tidefs-commit_group" }
tidefs-types-package-profile-catalog = { path = "../../crates/tidefs-types-package-profile-catalog" }

[features]
ublk-host = []

[[bin]]
name = "tidefs-block-volume-adapter-daemon"
path = "src/main.rs"

[dev-dependencies]
blake3 = { version = "1", default-features = false }
tidefs-block-volume-adapter-core = { path = "../../crates/tidefs-block-volume-adapter-core" }
