[package]
name = "tidefs-filesystem-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "Demo for the TideFS Local Filesystem MVP over the Local Object Store"

[dependencies]
tidefs-local-filesystem = { workspace = true }
tidefs-posix-filesystem-adapter-daemon = { workspace = true }
tidefs-vfs-engine = { workspace = true }
tidefs-local-object-store = { workspace = true }
fuser = { version = "0.14.0", features = ["abi-7-28"] }

[[bin]]
name = "tidefs-filesystem-demo"
path = "src/main.rs"
