[package]
name = "tidefs-posix-filesystem-adapter-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "POSIX filesystem adapter operator entrypoint and FUSE validation harness for TideFS"

[dependencies]
tidefs-workload = { workspace = true }
tidefs-intent-log = { workspace = true }
blake3 = { version = "1", default-features = false }
fuser = { version = "0.14.0", features = ["abi-7-30", "abi-7-32"] }
libc = "0.2"
rustix = { version = "0.38.44", features = ["fs"] }
tidefs-local-filesystem = { workspace = true, features = ["encryption"] }
tidefs-pool-import = { workspace = true }
tidefs-dataset-lifecycle = { workspace = true }
tidefs-dataset-catalog = { workspace = true }
tidefs-inode-table = { workspace = true }
tidefs-invalidation-feed = { workspace = true }
tidefs-dir-index = { workspace = true }
tidefs-posix-acl = { workspace = true }
tidefs-commit_group = { workspace = true }
tidefs-cache-core = { workspace = true }
tidefs-extent-map = { workspace = true }
tidefs-types-extent-map-core = { workspace = true }
tidefs-permission = { workspace = true }
tidefs-lock-service = { workspace = true }
tidefs-posix-semantics = { workspace = true }
tidefs-background-scheduler = { workspace = true }
tidefs-block-allocator = { workspace = true }
tidefs-block-volume-adapter-core = { workspace = true }
tidefs-local-object-store = { workspace = true }
tidefs-orphan-index = { workspace = true }

tidefs-recovery-loop = { workspace = true }

tidefs-inode-attributes = { workspace = true }
tidefs-posix-filesystem-adapter-workers-io = { workspace = true }
tidefs-posix-filesystem-adapter-workers-locks = { workspace = true }
tidefs-schema-codec-posix-filesystem-adapter = { workspace = true, optional = true }
tidefs-types-package-profile-catalog = { workspace = true }
tidefs-types-posix-filesystem-adapter-core = { workspace = true }
tidefs-types-vfs-core = { workspace = true }
tidefs-types-dataset-feature-flags-core = { workspace = true }
tidefs-vfs-engine = { workspace = true }
tidefs-namespace = { workspace = true, features = ["persistent-dir-index"] }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
tidefs-flow-commit-coordinator = { workspace = true }
tidefs-cluster = { workspace = true }
bincode = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }


[features]
default = []
receipt-demo = [
    "tidefs-types-posix-filesystem-adapter-core/wake-receipt",
    "dep:tidefs-schema-codec-posix-filesystem-adapter",
]

[dev-dependencies]
tidefs-validation = { workspace = true }
tempfile = { workspace = true }
tidefs-block-volume-adapter-core = { workspace = true }

tidefs-inode-attributes = { workspace = true }

[lib]
path = "src/lib.rs"
name = "tidefs_posix_filesystem_adapter_daemon"
[[bin]]
name = "tidefs-posix-filesystem-adapter-daemon"
path = "src/main.rs"
