[package]
name = "tidefs-scrub"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

description = "Object-store data integrity scrub and verification tool for TideFS"

[dependencies]
tidefs-local-filesystem = { path = "../../crates/tidefs-local-filesystem" }
tidefs-local-object-store = { path = "../../crates/tidefs-local-object-store" }
tidefs-checksum-tree = { path = "../../crates/tidefs-checksum-tree" }
tidefs-compression = { path = "../../crates/tidefs-compression" }
tidefs-scrub-core = { path = "../../crates/tidefs-scrub-core" }
zstd = { version = "0.13", default-features = false }
lz4_flex = { version = "0.11", default-features = false, features = ["frame"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "tidefs-scrub"
path = "src/main.rs"
