[package]
name = "tidefs-scrub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

description = "Object-store data integrity scrub and verification tool for TideFS"

[dependencies]
tidefs-local-filesystem = { workspace = true }
tidefs-local-object-store = { workspace = true }
tidefs-checksum-tree = { workspace = true }
tidefs-compression = { workspace = true }
tidefs-scrub-core = { workspace = true }
zstd = { version = "0.13", default-features = false }
lz4_flex = { version = "0.11", default-features = false, features = ["frame"] }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "tidefs-scrub"
path = "src/main.rs"
